  ###################################
##### Changed in Scannomatic 0.991 #####
   ###################################

*** Previous blob (t+1) detected is now tracked and the difference between 
    current and previous is used to decide if detection failed and then the
    blob detection from the previous time-point is used instead of the present.

*** Analysis of project is now run in 'Cell Estimate Space' if 
    calibration has been done.

*** Background element of grid cell is now an eroded negative of
    blob such that there's a buffer-zone inbetween the two belonging
    to none of them.

*** Calibration curve to transfer data from 'Kodak Value Space' to 
    'Cell Estimate Space' done for BY4743 using ten randomly omitted
    points as a test set and obtaining near 1:1 correlation between 
    calculated cell estimate and independent measure.

        y = 3.3797963108805451e-05x⁵ + 48.990614276885069x


*** Corrected bug that turned stuff up-side-down when running watch on
    a colony while producing analysis for a whole project.

*** Made Analyse One GUI more self-explaining

*** Calibration measures are no longer mean pixel-darkening, but vectors of
    all pixels that corresponds to an independent cell count.

*** In subracting background:mean negative values for blob in calibration
    is not allowed.

*** Cells now count as positive values relative to background

*** Calibration point saving saves a representation of the Kodak Value Space-
    vector that exactly represents the Cell Estimate

*** Improved orthagonal grayscale detection to more robust methods.

*** Changed the was median, IQR and IQR_mean is calculated to have
    better control of these parameters.

*** Corrected error and inefficient calculation of mean for the
    different grid-items

*** Included Unit Test code for grid placement by random removal of
    spikes detected. Outcome is generally good, but wrong placement